--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ main {
     display: flex;
 }
 
-#textarea-en {
+.textarea-en {
     margin: 6.5em 0em 1em 8em;
     letter-spacing: 1px;
     resize: none;
@@ -44,7 +44,8 @@ main {
     box-sizing: border-box;
 }
 
-#textarea-ar {
+
+.textarea-ar {
     margin-left: auto;
     margin-right: 8em;
     margin-bottom: 1em;
@@ -71,4 +72,24 @@ footer {
     box-shadow: 2px 5px 5px lightgrey;
     font: italic 1.2em "Fira Sans", serif;
 
+}
+
+
+#save {
+    position: absolute;
+    left: 85%;
+    margin: 3.2em 2em 2em 2em;
+    width: 7em;
+    height: 3em;
+    box-shadow: 0 0 8px 0 rgba(17,22,26,.16),0 4px 8px 0 rgba(17,22,26,.08),0 8px 16px 0 rgba(17,22,26,.08);
+    background: rgba(245, 241, 241, 0.856);
+    border: 1px solid #00CED1;
+    color: #00CED1;
+    border-radius: .25rem;
+    font-weight: bold;
+    cursor: pointer;
+    letter-spacing: 1px;
+    text-align: center;
+    font-family: Open Sans,sans-serif;
+    font-weight: 600;
 }
